--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: your.email@example.com</p>
+    <p>Email: cathairmab@gmail.com</p>
     <p>LinkedIn: <a href="#">YourLinkedInProfile</a></p>
-    <p>GitHub: <a href="#">YourGitHub</a></p>
+    <p>GitHub: <a href="#">https://github.com/cathairmab</a></p>
   </section>
 
   <footer>
