--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cathair Mac an Bheatha — Portfolio</title>
+    <link href="/src/index.css" rel="stylesheet">
+    <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body class="scroll-pt-600">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
